    ones. See https://spot.lre.epita.fr/ltlmix.html for examples.

  - ltlsynt --csv=FILENAME will now save the source filename for the
    processed formulas as the first column of the CSV file.  A new
    option --csv-without-formula=FILENAME can be used to save
    everything but the formula column (as it can be very large, and
    can be found from the source filename).

  - ltlsynt learned a --part-file option, to specify the partition of
    input/output proposition from a *.part file, as used in several
    other tools.

  - ltlfilt learned a --relabel=io mode, that is useful to shorten
    atomic propositions in the context of LTL synthesis.  For instance

    % ltlfilt -f 'G(req->Fack)&G(go->Fgrant)' --relabel=io --ins=req,go
    G(i1 -> Fo0) & G(i0 -> Fo1)

    The resulting formulas are now usable by ltlsynt without having to
    specify which atomic propositions are input or output, as this can
    be inferred from their name.  (This suspports a --part-file option
    as well.)

  - genltl learned --lily-patterns to generate the example LTL
    synthesis specifications from Lily 1.0.2.  Those come with input
    and output atomic proposition rewriten in the form "iNN" or "oNN",
    so they can be fed to ltlsynt directly, as in

       % genltl --lily-patterns | ltlsynt -q

  - autfilt learned --restrict-dead-end-edges, to restricts labels of
    edges leading to dead-ends.  See the description of
    restrict_dead_end_edges_here() below.

  - autfilt learned --track-formula=F to label states with formulas
    derived from F.  (This is more precise on deterministic automata.)

  - ltlfilt learned --pi1, --sigma1, --delta1, --pi2, --sigma2, and
    --delta2 to filter according to classes Π₁,Σ₁,Δ₁,Π₂,Σ₂, and Δ₂.

  - ltlfilt learned --to-delta2 to transform an LTL formula into Δ₂.

  Library:

   - restrict_dead_end_edges_here() can reduce non-determinism (but
     not remove it) by restricting the label L of some edge (S)-L->(D)