@@ -48,7 +48,7 @@ except ImportError:
 x = pandas.read_csv("out.csv")
 x.to_csv('filtered.csv',
          columns=('source', 'formula', 'algo',
-                  'realizable', 'strat_num_states'),
+                  'realizable', 'strat_states'),
          index=False)
 EOF
 
@@ -56,7 +56,7 @@ EOF
 $PYTHON test.py
 
 cat >expected <<EOF
-source,formula,algo,realizable,strat_num_states
+source,formula,algo,realizable,strat_states
 formulas.ltl:1,G(i1 <-> Xo1),lar,1,3
 formulas.ltl:2,F(i1 xor i2) <-> Fo1,lar,1,2
 formulas.ltl:3,i1 <-> F(o1 xor o2),lar,1,3
@@ -72,7 +72,7 @@ ltlsynt --ins=i1,i2 -F input.csv/-2 --csv=out.csv -q && exit 2
 test $? -eq 1
 $PYTHON test.py
 cat >expected <<EOF
-source,formula,algo,realizable,strat_num_states
+source,formula,algo,realizable,strat_states
 input.csv:2,G(i1 <-> Xo1),lar,1,3
 input.csv:3,F(i1 xor i2) <-> Fo1,lar,1,2
 input.csv:4,i1 <-> F(o1 xor o2),lar,1,3
@@ -85,7 +85,7 @@ grep -v 0,0 filtered.csv >input.csv
 ltlsynt -F input.csv/-2 --csv=out.csv -q
 $PYTHON test.py
 cat >expected <<EOF
-source,formula,algo,realizable,strat_num_states
+source,formula,algo,realizable,strat_states
 input.csv:2,G(i1 <-> Xo1),lar,1,3
 input.csv:3,F(i1 xor i2) <-> Fo1,lar,1,2
 input.csv:4,i1 <-> F(o1 xor o2),lar,1,3
